# ModelPilot

./: LICENSE  README.md  pyproject.toml
examples/: clearwater.yaml
src/modelpilot/adapters/: ngboost_adapter.py  registry.py  sklearn_rf.py
src/modelpilot/analysts/: shap_analysis.py
src/modelpilot/cli/: main.py
src/modelpilot/core/: study.py
src/modelpilot/evaluators/: metrics.py
src/modelpilot/governance/: gates.py
src/modelpilot/rag/: index.py
src/modelpilot/reporters/: model_card.py
src/modelpilot/searchers/: optuna_searcher.py  registry.py
src/modelpilot/storage/: registry.py
streamlit_app/: app.py
tests/: test_import.py
